# competition-difficulty

./: .gitignore  README.md  bert-large.py  difficulty.ipynb  pyproject.toml
code/: README.md  bert-base.py  bert-large-reg.py  bert-large.py  customLoss.py  ensemble.py  eval.py  explore.py  gensim_test.py  make_dev.py  my_qwk.py  roberta-large.py  two-mixture.eval.py  two-mixture.py  word_diff_checker.py
code/eda/: augment.py
