[project]
name = "difficulty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=3.2.0",
  "gensim>=4.3.3",
  "lightning>=2.4.0",
  "nltk>=3.9.1",
  "protobuf>=5.29.3",
  "scikit-learn>=1.6.0",
  "sentencepiece>=0.2.0",
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "transformers>=4.47.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "platform_system == 'Linux'"},
]
torchvision = [
  { index = "pytorch-cu121", marker = "platform_system == 'Linux'"},
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
